deploy-rketst.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: count-rketst
  namespace: rketst
  labels:
    workload.user.cattle.io/workloadselector: apps.statefulset-rketst-count-rketst
spec:
  serviceName: count
  replicas: 1
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.statefulset-rketst-count-rketst
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: apps.statefulset-rketst-count-rketst
    spec:
      containers:
        - name: count
          image: harbor.vghtpe.gov.tw/rketst/count:latest
          ports:
            - name: https
              containerPort: 8443
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /APData
              name: vol
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
      volumes:
        - name: vol
          nfs:
            path: /home/nfs-test
            server: 10.100.130.203
  volumeClaimTemplates: []
---
apiVersion: v1
kind: Service
metadata:
  name: count
  namespace: rketst
spec:
  ports:
    - name: https
      port: 8443
      targetPort: 8443
  selector:
    workload.user.cattle.io/workloadselector: apps.statefulset-rketst-count-rketst
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: count
  namespace: rketst
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-secret: "rketst/tomcat"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "on"
spec:
  rules:
    - host: rketst.vghtpe.gov.tw
      http:
        paths:
          - path: /count/count
            pathType: Prefix
            backend:
              service:
                name: count
                port:
                  number: 8443
  tls:
    - hosts:
        - rketst.vghtpe.gov.tw
      secretName: test
