deploy-test.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: count
  namespace: rketst
  labels:
    workload.user.cattle.io/workloadselector: apps.statefulset-rketst-count
spec:
  serviceName: count
  replicas: 3
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.statefulset-rketst-count
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: apps.statefulset-rketst-count
    spec:
      containers:
        - name: count
          image: harbor.vghtpe.gov.tw/poc_test/count:latest
          ports:
            - name: http
              containerPort: 8080
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /APData/count/
              name: vol-count
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
      volumes:
        - name: vol-count
          nfs:
            path: /home/nfs-test/count/
            server: 10.100.130.203
  volumeClaimTemplates: []
---
apiVersion: v1
kind: Service
metadata:
  name: count
  namespace: rketst
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    workload.user.cattle.io/workloadselector: apps.statefulset-rketst-count
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: count
  namespace: rketst
spec:
  rules:
    - host: rketst.vghtpe.gov.tw
      http:
        paths:
          - path: /count
            pathType: Prefix
            backend:
              service:
                name: count
                port:
                  number: 8080
